# ocr-eval-framework

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  REPRODUCIBILITY.md  aggregate_results.py  download_dataset.py  evaluate.py  generate_charts.py  generate_ground_truth.py  pyproject.toml  recompute_metrics.py  requirements.txt  run_batch.py  run_model.py  run_single.py  setup_env.sh
.agents/skills/analyze-results/: SKILL.md
.claude/: settings.json
.claude/rules/: dataset-analysis.md  evaluation.md  whitepaper.md
.claude/skills/add-ocr-model/: SKILL.md
.claude/skills/analyze-results/: SKILL.md
cli/: evaluate.py  run_batch.py  run_model.py  run_single.py
configs/: config.yaml
docs/: OCR_Test_Dataset_Tracker.xlsx  OCR_Whitepaper_Plan_v2.docx
docs/plans/: 2026-04-09-ocr-whitepaper-revival-plan.md
docs/whitepaper/: current-state.md  draft.md  sanity-checks-2026-04-09.md  tables.md
models/: __init__.py  amazon_bdan.py  amazon_textract.py  azure_adi.py  base.py  deepseek_ocr.py  docling_model.py  google_vision.py  got_ocr.py  mistral_ocr.py  olmocr_model.py  paddleocr_model.py  qwen_vl.py  sarvam_ocr.py  surya_model.py  tesseract_model.py
notebooks/doc_intelligence_output/: document.md
results/20260424_205909_tesseract_lang_ablation/: lang_ablation.json  lang_ablation.md
scripts/: evaluate_json_output.py  run_phase2_chain.sh  setup_env.sh
tests/: test_metrics.py
tools/: aggregate_results.py  download_dataset.py  generate_charts.py  generate_ground_truth.py  recompute_metrics.py  tesseract_lang_ablation.py
utils/: helpers.py  metrics.py  report.py  runner.py
(+6 files in other folders)
