[project]
name = "ocr-eval-framework"
version = "0.1.0"
description = "Internal OCR evaluation framework and Phase 1 benchmark across open-source and API-accessible OCR systems."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Avinash Seethalam" }]
keywords = ["ocr", "benchmark", "evaluation", "document-intelligence"]

dependencies = [
  # Core
  "pyyaml>=6.0",
  "pillow>=10.0",
  "tqdm>=4.65",
  "requests>=2.31",
  "pandas>=2.0",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "matplotlib>=3.7",

  # Metrics
  "python-Levenshtein>=0.21",
  "nltk>=3.8",
  "rapidfuzz>=3.0",

  # APIs
  "mistralai>=1.0",

  # Open-source OCR engines
  "pytesseract>=0.3.10",
  "pdf2image>=1.17",
  "paddleocr>=2.7",
  "paddlepaddle>=2.5",
  "docling>=2.0",
  "surya-ocr>=0.6",

  # VLM / transformer stack (CPU-safe subset)
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.40",
  "accelerate>=0.27",
]

[project.optional-dependencies]
# Linux + CUDA only — required for DeepSeek / olmOCR full-speed inference.
cuda = [
  "vllm>=0.4",
  "flash-attn>=2.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pylint>=3.2",
]

[tool.uv]
# uv-specific configuration.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
